[project]
name = "mktmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "label-studio>=1.21.0",
    "label-studio-converter>=0.0.59",
    "label-studio-ml>=1.0.9",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "ultralytics>=8.3.204",
]
